# SRCNN-cpp

./: .gitignore  CMakeLists.txt  README.md  SRCNN-cpp.pro  SRCNN_cpp  main.cpp
model/: biases_conv1.txt  biases_conv2.txt  biases_conv3.txt  weights_conv1.txt  weights_conv2.txt  weights_conv3.txt
src/: datatype.hpp  gaussian.cpp  gaussian.hpp  srcnn.cpp  srcnn.hpp
test/: test.py  test_1_channel.py
